tests/variables/valid/refer.amu
main :: () -> s32 {
    a:s32 = 2;
    return a;
}