tests/variables/invalid/syntax_err_bad_lvalue_2.amu
main() : s32 {
    a:s32 = 2;
    !a = 3;
    return a;
}